[project]
name = "langgraph-rag-app"
version = "0.1.0"
description = ""
authors = [
    {name = "rosiefaulkner",email = "faulknerproject@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "langchain (>=1.0.7,<2.0.0)",
    "langchain-openai (>=1.0.3,<2.0.0)",
    "langgraph (>=1.0.3,<2.0.0)",
    "langchain-google-genai (>=3.0.3,<4.0.0)",
    "langchain-core (>=1.0.5,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "tavily-python (>=0.7.17,<0.8.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "chromadb (>=1.3.7,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
